syntax = "proto3";

package randomPackage;

service Random {
  rpc PingPong(PingRequest) returns (PongResponse) {};
  rpc RandomNumbers(NumberRequest) returns (stream NumberResponse) {};
  rpc TodoList(stream TodoRequest) returns (TodoResponse) {};
  rpc Chat(stream ChatRequest) returns (stream ChatResponse) {};
}

message PingRequest {
  string message = 1;
}

message PongResponse {
  string message = 1;
}

message NumberRequest {
  int32 maxValue = 1;
}

message NumberResponse {
  int32 number = 1;
}

message TodoRequest {
  string toDo = 1;
  string status = 2;
}

message TodoResponse {
  repeated TodoRequest toDos = 1;
}

message ChatRequest {
  string message = 1;
}

message ChatResponse {
  string username = 1;
  string message = 2;
}